--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -46,13 +46,25 @@ jobs:
         run: |
           ./gradlew build --console=plain
 
+      - name: Temporarily save artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: lwk-artifact
+          path: lwk_bindings/android_bindings
+          retention-days: 1
+
   publish:
     runs-on: ubuntu-20.04
     needs: build
     if: startsWith(github.ref, 'refs/tags/bindings_')
     steps:
+
+      - name: Retrieve saved artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: lwk-artifact
+
       - name: Publish artifacts
-        working-directory: lwk_bindings/android_bindings
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
