--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -55,7 +55,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-20.04
-    #needs: build
+    needs: build
     if: startsWith(github.ref, 'refs/tags/bindings_')
     steps:
 
