--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -77,7 +77,7 @@ jobs:
         run: echo "RELEASE_REF=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Set env1
-        run: echo "RELEASE_VERSION=$(echo ${{ env.RELEASE_REF }} | sed 's/bindings_//'" >> $GITHUB_ENV |
+        run: echo "RELEASE_VERSION=$(echo ${{ env.RELEASE_REF }} | sed 's/bindings_//'" >> $GITHUB_ENV
 
       - name: echo env
         run: echo "${{ env.RELEASE_VERSION }}"
