--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -86,4 +86,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          chmod +x ./gradlew |
           ./gradlew publish -PlibraryVersion=${{ env.RELEASE_VERSION }}
